fixed routing problem, when deployed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
   vite-app:
     build: .
     ports:
-      - "8000:8000"  # Expose port 8000 for the Vite app
+      - "8000:80"  # Expose port 8000 for the Vite app
     environment:
-      - VITE_API_URL=${VITE_API_URL}   # You can replace with your environment variables
-      - VITE_SECRET_KEY=${VITE_SECRET_KEY}  # Replace with your actual environment variable names
+      - VITE_SUPABASE_URL=${VITE_SUPABASE_URL}   # You can replace with your environment variables
+      - VITE_SUPABASE_ANON_KEY=${VITE_SUPABASE_ANON_KEY}  # Replace with your actual environment variable names
     env_file:
       - .env  # Optional: You can put your env variables in a `.env` file
-
