--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,24 @@
 server {
-    listen 80;
+    listen       80;
+    listen       [::]:80;
+    server_name  localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
 
-    # Handle all SPA routes by redirecting to index.html
+    # Handle all routes (except static files) with the SPA's index.html
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Handle error pages (404 to index.html)
+    # Optional: Handle error pages (404 to index.html for SPA routing)
     error_page 404 /index.html;
+
+    # Optional: Handle server errors
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # Additional configurations (if needed)
 }
