added changes to default conf and setuser to login

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,24 +1,14 @@
 server {
-    listen       80;
-    listen       [::]:80;
-    server_name  localhost;
-
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-
-    # Handle all routes (except static files) with the SPA's index.html
+    listen 80;
+    root /usr/share/nginx/html;
+    
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
+        add_header Cache-Control "no-cache";
     }
 
-    # Optional: Handle error pages (404 to index.html for SPA routing)
-    error_page 404 /index.html;
-
-    # Optional: Handle server errors
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
     }
-
-    # Additional configurations (if needed)
 }
